--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,8 @@ a.custom-card:hover {
 #errorSurname,
 #errorCI,
 #errorCuenta,
-#errorImporte{
+#errorImporte,
+#errorValidacion{
   color: red;
 }
 #errorNumero,
@@ -189,4 +190,42 @@ a.custom-card:hover {
 }
 #carro_azul{
   color: blue;
+}
+#card{
+  background:  #F8F8F8;
+}
+#btn1{
+  background: #007bff;
+  text-align: center;
+  width: 40%;
+  margin-left: 45px;
+  color: white;
+}
+#btn2{
+  background: red;
+  text-align: center;
+  width: 40%;
+  margin-left: 45px;
+  color: white;
+}
+
+#card{
+  border: solid;
+}
+#Nombre1,
+#apellidos2,
+#edad1,
+#email1,
+#telefono1{
+  width: 60%;
+  margin-bottom: 25px;
+  padding: 7px;
+  margin-left: 45px;
+ 
+}
+.parrafo{
+  margin-left: 45px;
+}
+#titulo{
+  text-align: center;
 }
